--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^7.0.0",
-    "material-ui": "^0.20.2"
+    "material-ui": "^0.20.2",
+    "react-router-dom": "^6.2.1"
   }
 }
